# book-recommendation-api-

./: Dockerfile  book_recommendation_demo.ipynb  books.csv  books.faiss  main.py  pyproject.toml  render.yaml  requirements.txt  test.ipynb
app/: main.py
app/api/: __init__.py  endpoints.py
app/core/: config.py
app/models/: book.py
app/services/: recommendation.py
